ib livechat widget

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+<head>
+	<script>
+	(function(I,n,f,o,b,i,p){
+	I[b]=I[b]||function(){(I[b].q=I[b].q||[]).push(arguments)};
+	I[b].t=1*new Date();i=n.createElement(f);i.async=1;i.src=o;
+	p=n.getElementsByTagName(f)[0];p.parentNode.insertBefore(i,p)})
+	(window,document,'script','https://livechat.infobip.com/widget.js','liveChat');
+
+	liveChat('init', '28be5e09-1053-4ccf-a011-ad504679428f');
+	</script>
+</head>
+<body>
 Hello world
+</body>
+</html>
