--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	p=n.getElementsByTagName(f)[0];p.parentNode.insertBefore(i,p)})
 	(window,document,'script','https://livechat.infobip.com/widget.js','liveChat');
 
-	liveChat('init', '28be5e09-1053-4ccf-a011-ad504679428f');
+	liveChat('init', 'ec6ca856-0da3-4396-b22d-51cda0422f43');
 	</script>
 </head>
 <body>
-Hello world
+Hello world!
 </body>
 </html>
